--- a/BmsBridge/BmsBridge.csproj
+++ b/BmsBridge/BmsBridge.csproj
@@ -5,6 +5,11 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>dotnet-BmsBridge-c322b1c1-d95c-40ab-bd54-df37d6fc65a8</UserSecretsId>
+
+    <!-- Versioning -->
+    <Version>0.1.0</Version>
+    <InformationalVersion>$(Version)+$(SourceRevisionId)</InformationalVersion>
+    <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
   </PropertyGroup>
 
   <ItemGroup>
